Bug #10001 2 NDB nodes get signal 6 (abort) in DBTC
Submitted: 19 Apr 2005 17:52 Modified: 22 Apr 2005 7:50
Reporter: Johan Andersson
Status: Closed
Category:Server: Cluster Severity:S1 (Critical)
Version:mysql 5.0.4 OS:Linux (RHEL 4)
Assigned to: Martin Skold Target Version:

[19 Apr 2005 17:52] Johan Andersson
Description:
Running a stress test, when two ndbd nodes on one machine crashes due to signal 6 in
DBTC

Check tracefiles.

How to repeat:
no more info at this point.

Suggested fix:
-
[19 Apr 2005 17:54] Johan Andersson
cluster log

Attachment: ndb_1_cluster.log.gz (application/octet-stream, text), 39.41 KiB.

[19 Apr 2005 17:55] Johan Andersson
node 4

Attachment: ndb_4_bug.tgz (application/octet-stream, text), 84.30 KiB.

[19 Apr 2005 17:59] Johan Andersson
Node 2 and node 4 crashed simultaneously.
[20 Apr 2005 9:56] Martin Skold
Looks like abort() call in DbtcMain.cpp line 1882 has been left by misstake
[20 Apr 2005 11:10] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/24162
[22 Apr 2005 7:50] Martin Skold
Closing this one since the immediate reason
for crash is fixed. A second crash can be
seen in logs, same is found in #bug10058.