Removed forgotten abort() call, bug#10001